--- a/artwork.html
+++ b/artwork.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Our Work
-permalink: /work/
+title: Artwork
+permalink: /artwork/
 ---
 
     <!-- Slider Start -->
@@ -10,7 +10,7 @@ permalink: /work/
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h1>Just some of our latest projects.</h1>
+                    <h1>Artwork, Writings, and Music</h1>
                     <p>Don’t just take our word for it. Check out some of our latest work.</p>
                 </div>
             </div>
@@ -26,16 +26,14 @@ permalink: /work/
               <div class="portfolio-menu">
                 <ul>
                     <li class="filter" data-filter="all">Everything</li>
-                    <li class="filter" data-filter=".Branding">Branding</li>
-                    <li class="filter" data-filter=".Websites">Websites</li>
-                    <li class="filter" data-filter=".Graphic">Graphic</li>
-                    <li class="filter" data-filter=".design">design</li>
-                    <li class="filter" data-filter=".Video">Video</li>
+                    <li class="filter" data-filter=".Artwork">Artwork</li>
+                    <li class="filter" data-filter=".Writing">Writing</li>
+                    <li class="filter" data-filter=".Music">Music</li>
                 </ul>
               </div>
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
-                    <li class="mix Branding">
+                    <li class="mix Artwork">
                       <a href="#">
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
@@ -47,7 +45,7 @@ permalink: /work/
                         </div>
                       </a>
                   </li>
-                  <li class="mix Websites">
+                  <li class="mix Music">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
                       <div class="overly">
@@ -59,7 +57,7 @@ permalink: /work/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix Music">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
                       <div class="overly">
@@ -72,7 +70,7 @@ permalink: /work/
 
                     </a>
                   </li>
-                  <li class="mix design">
+                  <li class="mix Writing">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
                       <div class="overly">
@@ -84,7 +82,7 @@ permalink: /work/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Video">
+                  <li class="mix Artwork">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
                       <div class="overly">
@@ -96,7 +94,7 @@ permalink: /work/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix Writing">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
                       <div class="overly">
