Added project images and completely refined projects page of site.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@ permalink: /
         <div class="block">
           <div class="section-title">
             <h2>WHO AM I?</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+            <p>I'm a developer fueled by awe and inspired by the amazement of building and creating wonderous things.</p>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id </p>
+          <p>After years as a mathematics educator, teaching students from middle-school through undergraduate college, I decided to make the switch to a more creative career as a software developer.  I attended Dev Bootcamp's Web Development Immersive program in late 2016, gaining experience working in Rails 5 to create dynamic web apps incorporating React, THREE.js, p5.js, JavaScript ES6, JQUERY, AJAX, CSS3, HTML5, and Materialize.  My passions lie in working to create apps involving art, music, media, graphics, and games.</p>
+          <p>I am currently seeking employment in the greater New York City area as a full-time developer or engineer.  Please, don't hesitate to <a href="{{ site.baseurl }}/contact">contact me</a> today!</p>
         </div>
       </div><!-- .col-md-7 close -->
       <div class="col-md-5 col-sm-12">
@@ -45,10 +46,10 @@ permalink: /
   <div class="row">
     <div class="col-md-6 col-md-offset-6">
       <h2>WHAT AM I ABOUT?</h2>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <a href="#" class="btn btn-view-works">Projects</a>
+      <p>I studied pure and applied mathematics, and secondary education, before making the switch the development and engineering.  It is my belief that my skills as a developer are firmly rooted in my mathematical and logical problem solving abilities.  I think of problem solving as uncovering a hidden set of steps from an issue, to a solution.  A developer may uncover many sets of stairs that lead to a solution, and many more that lead nowhere.  Finding the "best" solution depends on the situation, and it is my job to find the most appropriate staircase for each individual circumstance.
+      <p>The majority of my experience is based in Rails 5, several modern JavaScript libraries, including React, THREE.js, p5.js, and JQUERY; with substantial HTML5, CSS3, and many CSS frameworks, such as Materialize and Jekyll.  Programming languages are all built on the same structures: variables, data structures, and algorithms.  The only barriers involve syntax and best practices; barriers that can easily be overcome with practice, documentation, and a healthy dose of Google searches.</p>
+      <p>I have worked on projects involving social media, music, graphics, and public APIs.  I am always interested in working in new fields, languages, frameworks, and methodologies!</p>
+      <a href="{{ site.baseurl }}/projects" class="btn btn-view-works">Check Out My Projects</a>
     </div>
   </div>
 </div>
@@ -60,7 +61,7 @@ permalink: /
     <div class="row">
       <div class="section-title">
         <h2>SKILLS</h2>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+        <p>I am flexible and can easily adapt to new programming languages, frameworks, and methodologies.</p>
       </div>
     </div>
     <div class="row ">
@@ -68,56 +69,56 @@ permalink: /
         <div class="service-item">
           <i class="icon ion-coffee"></i>
           <h4>Web Development</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <p>Making the most fun and engaging web apps with newest tools.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-compass"></i>
           <h4>Software Development</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <p>Crafting algorithms and working with data to build innovative software.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-image"></i>
           <h4>Applied Mathematics</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <p>Experience with advanced mathematics, logic, and problem solving.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-bug"></i>
           <h4>RAILS 5</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <p>An incredible framework for building dynamic web apps in Ruby!</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-headphone"></i>
           <h4>JavaScript</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <p>Experience working in vanilla and with the most popular new libraries.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-leaf"></i>
           <h4>HTML5/CSS3</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <p>Molding the structure and beauty of the web with the latest CSS frameworks.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-planet"></i>
           <h4>QUICK TO LEARN</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <p>A willingness to learn and grow with new languages and technologies.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-earth"></i>
-          <h4>FLEXIBILITY</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <h4>FLEXIBILE</h4>
+          <p>Experience working with a team, and eager to work for the client and user.</p>
         </div>
       </div>
     </div>
@@ -130,8 +131,8 @@ permalink: /
       <div class="col-md-12">
         <div class="block">
           <h2>CONTACT ME</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+          <p>I'm looking for full time work as a developer or engineer in the greater New York City area.  Please don't hesitate to contact me for me any reason!</p>
+          <a class="btn btn-default btn-call-to-action" href="{{ site.baseurl }}/contact">Contact</a>
         </div>
       </div>
     </div>
