--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,9 @@ permalink: /projects/
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h1>Just some of our latest projects.</h1>
-                    <p>Don’t just take our word for it. Check out some of our latest work.</p>
+                    <h1>Past and Current Projects</h1>
+                    <p>I love working on projects involving mathematics, music, art, graphics, games, and social media.</p>
+                    <p>Check out my past and current projects below, with links to sites and repositories.</p>
                 </div>
             </div>
         </div>
@@ -26,84 +27,131 @@ permalink: /projects/
               <div class="portfolio-menu">
                 <ul>
                     <li class="filter" data-filter="all">Everything</li>
-                    <li class="filter" data-filter=".Branding">Branding</li>
-                    <li class="filter" data-filter=".Websites">Websites</li>
-                    <li class="filter" data-filter=".Graphic">Graphic</li>
-                    <li class="filter" data-filter=".design">design</li>
-                    <li class="filter" data-filter=".Video">Video</li>
+                    <li class="filter" data-filter=".Music">Music</li>
+                    <li class="filter" data-filter=".Art">Art</li>
+                    <li class="filter" data-filter=".Graphics">Graphics</li>
+                    <li class="filter" data-filter=".Games">Games</li>
+                    <li class="filter" data-filter=".Media">Media</li>
                 </ul>
               </div>
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
-                    <li class="mix Branding">
-                      <a href="#">
-                        <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
-                        <div class="overly">
-                          <div class="position-center">
-                            <h2>Tesla Motors</h2>
-                            <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                          </div>
-                        </div>
-                      </a>
-                  </li>
-                  <li class="mix Websites">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
+                  <!-- Beatnik -->
+                  <li class="mix Music Graphics Media">
+                    <a href="https://github.com/gvbilello/beatnik-app">
+                      <img src="/img/projects/beatnik.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
+                          <h2>Beatnik</h2>
+                          <p>A custom-built web player and visualizer for Spotify.  Built in Rails with THREE.js.</p>
                         </div>
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <!-- Voidwalker -->
+                  <li class="mix Graphics Games Art">
+                    <a href="https://github.com/gvbilello/Voidwalker">
+                      <img src="/img/projects/voidwalker.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
-                      </div>
-
-                    </a>
-                  </li>
-                  <li class="mix design">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
+                          <h2>Voidwalker</h2>
+                          <p>A work-in-progress, 2D, zelda-inspired video game built in Ruby with Gosu.</p>
                         </div>
                       </div>
                     </a>
                   </li>
-                  <li class="mix Video">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
+                  <!-- Ruby Maze Generator -->
+                  <li class="mix Graphics Games">
+                    <a href="https://github.com/gvbilello/ruby-maze-generator">
+                      <img src="/img/projects/ruby_maze_generator.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
+                          <h2>Ruby Maze Generator</h2>
+                          <p>A maze generatoring algorithm built in Ruby using Gosu.  For future use with Voidwalker to create custom maze 'dungeons'.</p>
                         </div>
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
+                  <!-- Gif Overflow -->
+                  <li class="mix Graphics Media">
+                    <a href="https://github.com/gvbilello/gif-overflow">
+                      <img src="/img/projects/gif_overflow.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
+                          <h2>Gif Overflow</h2>
+                          <p>A Stack Overflow clone built in Ruby with Sinatra, for users to post and share gifs.</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <!-- Sudoku Solver -->
+                  <li class="mix Graphics">
+                    <a href="https://github.com/gvbilello/sudoku-challenge/tree/solo-gvbilello">
+                      <img src="/img/projects/sudoku_solver.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>Sudoku Solver</h2>
+                          <p>A Sudoku solving algorithm built in Ruby. Can successfully solve any Sudoku puzzle in seconds.</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <!-- JS Maze Generator -->
+                  <li class="mix Graphics Games">
+                    <a href="https://github.com/gvbilello/js-maze-generator">
+                      <img src="/img/projects/js_maze_generator.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>JS Maze Generator</h2>
+                          <p>The precursor to my Ruby Maze Generator, built in JavaScript with p5.js, the script animates the maze-finding algorithm in real time.</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <!-- Gosu Sidescroller Test -->
+                  <li class="mix Games Graphics Art">
+                    <a href="https://github.com/gvbilello/gosu-game-test">
+                      <img src="/img/projects/gosu_sidescroller_test.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>Gosu Sidescroller Test</h2>
+                          <p>Built in Ruby with Gosu, this simple sidescroller was built to test out jump physics and collision detection for future 2D sidescroller projects.</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <!-- VGDB -->
+                  <li class="mix Media Games">
+                    <a href="https://github.com/gvbilello/vgdb">
+                      <img src="/img/projects/vgdb.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>VGDB</h2>
+                          <p>A video game social media site using Giant Bomb's database API.</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <!-- gMDB -->
+                  <li class="mix Media">
+                    <a href="https://github.com/gvbilello/gmdb">
+                      <img src="/img/projects/gmdb.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>gMDB</h2>
+                          <p>An iMDB clone built in Rails with React, allowing users to search the oMDB API database and view Movie and Television Show details.</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <!-- tubeTV -->
+                  <li class="mix Media">
+                    <a href="https://github.com/gvbilello/tubeTV-alpha">
+                      <img src="/img/projects/tubetv.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>tubeTV</h2>
+                          <p>A work-in-progress web app that allows users to create custom YouTube 'channels' to watch in traditional TV fashion.</p>
                         </div>
                       </div>
                     </a>
@@ -117,7 +165,7 @@ permalink: /projects/
 </section>
 
 <!-- Clients Logo Section Start -->
-<section id="clients-logo-section">
+<!-- <section id="clients-logo-section">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -164,7 +212,7 @@ permalink: /projects/
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 
 <!-- Call to action Start -->
