Start work on Blog page.

--- a/artwork.html
+++ b/artwork.html
@@ -11,14 +11,14 @@ permalink: /artwork/
             <div class="col-md-12">
                 <div class="block">
                     <h1>Artwork, Writings, and Music</h1>
-                    <p>Don’t just take our word for it. Check out some of our latest work.</p>
+                    <p>Under Construction!</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
     <!-- Portfolio Start -->
-<section id="portfolio-work">
+<!-- <section id="portfolio-work">
     <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -112,10 +112,10 @@ permalink: /artwork/
           </div>
         </div>
     </div>
-</section>
+</section> -->
 
 <!-- Clients Logo Section Start -->
-<section id="clients-logo-section">
+<!-- <section id="clients-logo-section">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -162,7 +162,7 @@ permalink: /artwork/
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 
 <!-- Call to action Start -->
