--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,8 @@ permalink: /blog/
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h1>Get the latest on what we're doing</h1>
-          <p>Catch up with us, anytime and anywhere</p>
+          <h1>Keep Up With My Writings, Thoughts, and Assorted Musings</h1>
+          <p>Stay informed about my work, projects, and thoughts on tech, gaming, science, and all-things metal.</p>
         </div>
       </div>
     </div>
