--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@ permalink: /contact/
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h1>Drop Us A Note</h1>
-          <p>Don’t just take our word for it. Check out some of our latest work.</p>
+          <h1>Contact Me Anytime!</h1>
+          <p>Questions, comments, or anything else?  Send me an email and I'll get back to you as soon as possible.</p>
         </div>
       </div>
     </div>
@@ -53,13 +53,13 @@ permalink: /contact/
           <h2>Stop By For A visit</h2>
           <ul class="address-block">
             <li>
-              <i class="fa fa-map-marker"></i>North Main Street,Brooklyn Australia
+              <i class="fa fa-map-marker"></i>Brooklyn, NY
             </li>
             <li>
-              <i class="fa fa-envelope-o"></i>Email: contact@mail.com
+              <i class="fa fa-envelope-o"></i>Email: gregory(dot)bilello(at)gmail(dot)com
             </li>
             <li>
-              <i class="fa fa-phone"></i>Phone:+88 01672 506 744
+              <i class="fa fa-phone"></i>Please Contact Me
             </li>
           </ul>
 
