Update contact section on each main site page.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ permalink: /
       <div class="col-md-12">
         <div class="block">
           <h2>CONTACT ME</h2>
-          <p>I'm looking for full time work as a developer or engineer in the greater New York City area.  Please don't hesitate to contact me for me any reason!</p>
+          <p>I'm looking for full time work as a developer or engineer in the greater New York City area, but I'm also interested in collaborating on open-source projects.  Drop me a line!</p>
           <a class="btn btn-default btn-call-to-action" href="{{ site.baseurl }}/contact">Contact</a>
         </div>
       </div>
