Updated index page images and removed contact section from other pages.

--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@ permalink: /contact/
   </div>
 </section>
 <!-- Call to action Start -->
-<section id="call-to-action">
+<!-- <section id="call-to-action">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -112,4 +112,4 @@ permalink: /contact/
       </div>
     </div>
   </div>
-</section>
+</section> -->
