--- a/artwork.html
+++ b/artwork.html
@@ -166,7 +166,7 @@ permalink: /artwork/
 
 
 <!-- Call to action Start -->
-<section id="call-to-action">
+<!-- <section id="call-to-action">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -179,3 +179,4 @@ permalink: /artwork/
     </div>
   </div>
 </section>
+ -->
