--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@ permalink: /blog/
 {% endfor %}
 
 <!-- Call to action Start -->
-<section id="call-to-action">
+<!-- <section id="call-to-action">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -41,3 +41,4 @@ permalink: /blog/
     </div>
   </div>
 </section>
+ -->
