--- a/projects.html
+++ b/projects.html
@@ -216,7 +216,7 @@ permalink: /projects/
 
 
 <!-- Call to action Start -->
-<section id="call-to-action">
+<!-- <section id="call-to-action">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -228,4 +228,4 @@ permalink: /projects/
       </div>
     </div>
   </div>
-</section>
+</section> -->
